--- a/Task9/Task9.csproj
+++ b/Task9/Task9.csproj
@@ -49,5 +49,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TestCore\TestCore.csproj">
+      <Project>{9081C1C3-E90D-4A70-A796-E9C5B47443F3}</Project>
+      <Name>TestCore</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
